--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: #333;
 }
 
 body {
@@ -93,6 +94,7 @@ h2 {
     justify-content: space-evenly;
 }
 
+
 @media screen and (max-width: 1050px) {
     .finance-form {
         flex-direction: column;
@@ -157,7 +159,6 @@ button.submit-btn:hover {
     max-width: 950px;
     margin: auto;
     background-color: #fff;
-    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 30px;
@@ -166,7 +167,6 @@ button.submit-btn:hover {
 .all-text-report {
     display: flex;
     justify-content: space-between;
-    max-width: 975px;
     margin: 0 auto;
 }
 
@@ -195,6 +195,42 @@ button.submit-btn:hover {
     margin-top: 30px;
 }
 
+#ul-negative-diagram, #ul-positive-diagram{
+    max-width: 48%;
+    margin: 20px auto ;
+}
+
+
+#ul-negative-diagram li::before, #ul-positive-diagram li::before {
+    content: "•";  
+    color: #f8d81c;
+}
+    
+#ul-negative-diagram li, #ul-positive-diagram li {
+    display: flex;
+    flex-direction: row;
+    list-style: disc;
+    list-style-position: inside;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-bottom: 5px;
+}
+
+#ul-negative-diagram li p[id^="sum_kat"] {
+    color: #cf1525;
+}
+
+#ul-positive-diagram li p[id^="sum_kat"] {
+    color: #05c10b;
+}
+
+ul li{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 @media screen and (max-width: 1050px) {
     .all-text-report {
         flex-direction: column;
@@ -205,13 +241,31 @@ button.submit-btn:hover {
     }
     .container-text {
         margin-bottom: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
     .all-text-report {
         align-items: center;
         text-align: center;
     }
+    #ul-negative-diagram, #ul-positive-diagram{
+        max-width: 100%;
+    }
+
+    .main-container, .form-container, .report-container{
+        max-width: 750px;
+    }
+  
+    
+
 }
 
+@media screen and (max-width: 350px) {
+    .negative-diagram, .positive-diagram{
+        width: 250px;
+    }
+}
 
 /*main container*/
 
@@ -223,9 +277,4 @@ button.submit-btn:hover {
     position: relative;
     width: 100%;
     padding-top: 56.25%;
-}
-
-#curve_chart {
-    width: 100%;
-    height: 100%;
 }
